Fixed spacing and alignment

--- a/frontend/src/Menu.css
+++ b/frontend/src/Menu.css
@@ -7,7 +7,7 @@
     justify-content: center;
     width: 90%;
     border-radius: 10px;
-    margin: 50px 50px;
+    margin: 50px 50px 35px 50px;
     padding: 10px;
     font-size: 24px;
     font-weight: bold;
